Cross-project modification of the DigitalObject, allowing a permanent URI instead of URL.  As the unique reference does not have to be a locatable bytestream, and may indeed need to be a JDBC URI in some cases, this seems a sensible change.